fix: was using vh on mobile devices

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -5,12 +5,15 @@ $darkColor: black;
 .CenteredLogo {
   display: flex;
   justify-content: center;
-  height: 50vh;
   background: url("../res/logo.svg");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   width: 100%;
+  height: 50vh;
+  @include breakpoint(small) {
+    height: 15em;
+  }
 }
 
 .ResponsiveIframe {
@@ -30,7 +33,6 @@ $darkColor: black;
 
 .FullPage {
   //border: 10px solid black;
-  height: 90vh;
   display:flex;
   justify-content: center;
   align-items: center;
